[project]
name = ""
version = ""
description = ""
authors = [
    {name = "RyomaHan", email = "ryomahan1996@gmail.com"},
]
dependencies = [
    "anyio>=3.6.1",
    "uvicorn>=0.18.2",
    "fastapi>=0.79.0",
    "websockets>=10.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
