[project]
name = "starlette"
version = "0.0.1"
description = ""
authors = [
    {name = "ryomahan", email = "ryomahan1996@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
